syntax = "proto3";

package wallet;

service WalletService {
  rpc CreateWallet(CreateWalletRequest) returns (CreateWalletResponse);
  rpc GetWallet(GetWalletRequest) returns (GetWalletResponse);
  rpc DeductBalance(DeductBalanceRequest) returns (DeductBalanceResponse);
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse);
  rpc GetChargingSessions(GetChargingSessionsRequest) returns (GetChargingSessionsResponse);
}

message CreateWalletRequest {
  string userId = 1;
  string customerName = 2;
  string customerEmail = 3;
}

message CreateWalletResponse {
  bool success = 1;
  string walletId = 2;
  string message = 3;
}

message GetWalletRequest {
  string userId = 1;
}

message GetWalletResponse {
  bool success = 1;
  string walletId = 2;
  double balance = 3;
  string userId = 4;
  string customerName = 5;
  string message = 6;
}

message DeductBalanceRequest {
  string userId = 1;
  double amount = 2;
  string description = 3;
}

message DeductBalanceResponse {
  bool success = 1;
  double newBalance = 2;
  string message = 3;
}

message GetTransactionsRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message Transaction {
  string id = 1;
  string userId = 2;
  double amount = 3;
  string type = 4;
  string description = 5;
  string timestamp = 6;
}

message GetTransactionsResponse {
  bool success = 1;
  repeated Transaction transactions = 2;
  int32 total = 3;
  int32 page = 4;
  int32 limit = 5;
  string message = 6;
}

message GetChargingSessionsRequest {
  string userId = 1;
  int32 page = 2;
  int32 limit = 3;
}

message ChargingSession {
  string id = 1;
  string userId = 2;
  string bikeId = 3;
  double amount = 4;
  string startTime = 5;
  string endTime = 6;
  string status = 7;
}

message GetChargingSessionsResponse {
  bool success = 1;
  repeated ChargingSession sessions = 2;
  int32 total = 3;
  int32 page = 4;
  int32 limit = 5;
  string message = 6;
}
